# gain-insight-fx

./: .gitignore  README.md  create-project.sh  dashboard.html  index.html
.github/workflows/: deploy.yml
backend/: .env  .env.example  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_migration.py  002_alerts_and_notifications.py
backend/app/: main.py
backend/app/api/: deps.py
backend/app/api/v1/: dependencies.py  router.py
backend/app/api/v1/endpoints/: admin.py  alerts.py  analytics.py  auth.py  transactions.py  users.py
backend/app/core/: config.py  events.py  scheduler.py  security.py
backend/app/db/: base.py  base_class_imports.py  firebase.py  init_db.py  session.py
backend/app/models/: alert.py  audit.py  currency.py  notification.py  transaction.py  user.py  wallet.py
backend/app/schemas/: alert.py  auth.py  currency.py  transaction.py  user.py  wallet.py
backend/app/services/: alert.py  analytics.py  auth.py  notification.py  transaction.py
backend/app/utils/: audit.py  exchange_apis.py  prediction.py
css/: dashboard.css  login.css  styles.css
financial-dashboard/: README.md  dashboard.html  index.html
financial-dashboard/js/: auth.js
frontend/: package-lock.json  package.json
frontend/src/: App.js  routes.js
gain-insight-fx/backend/: .env.example
js/: auth.js  charts.js  config-debug.js  config.js  dashboard.js  data.js
js/core/: api.js  auth.js  config.js
js/data/: currency-data.js  scraper.js  transaction.js
js/ui/: dashboard.js  navigation.js  receipt-parser.js
(+59 files in other folders)
