[tool.poetry]
name = "savings-tracker"
version = "0.1.0"
description = "Personal finance monitoring system"
authors = ["Chibueze C Igwe <scientistigwe@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.32.3"
fastapi = "^0.115.11"
uvicorn = "^0.29.0"
pydantic = "^2.7.0"
pydantic-settings = "^2.2.1"
python-jose = "^3.3.0"
python-multipart = "^0.0.9"
email-validator = "^2.1.1"
asyncpg = "^0.29.0"
passlib = "^1.7.4"
bcrypt = "^4.1.2"
httpx = "^0.27.0"
sqlalchemy = "^2.0.39"
numpy = "^2.2.3"
scikit-learn = "^1.6.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-asyncio = "^0.23.5"
black = "^24.1.1"
isort = "^5.13.2"
flake8 = "^7.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ["py312"]

[tool.isort]
profile = "black"
line_length = 88

[tool.pytest.ini_options]
asyncio_mode = "auto"